src/styles.css
@import "tailwindcss";

@layer utilities {
    .backdrop-hack {
        @apply absolute inset-0 -z-10;
    }
}

@theme {
    --color-primary-50: var(--primary-50);
    --color-primary-100: var(--primary-100);
    --color-primary-200: var(--primary-200);
    --color-primary-300: var(--primary-300); 
    --color-primary-400: var(--primary-400); 
    --color-primary-500: var(--primary-500);  
    --color-primary-600: var(--primary-600); 
    --color-primary-700: var(--primary-700);
    --color-primary-800: var(--primary-800);
    --color-primary-900: var(--primary-900);
    --color-primary-950: var(--primary-950);

    --color-gray-50: #f6f6f6;
    --color-gray-100: #e7e7e7;
    --color-gray-200: #d1d1d1;
    --color-gray-300: #b0b0b0;
    --color-gray-400: #888888;
    --color-gray-500: #6d6d6d;
    --color-gray-600: #5d5d5d;
    --color-gray-700: #4f4f4f;
    --color-gray-800: #454545;
    --color-gray-900: #3d3d3d;
    --color-gray-950: #000000;

    --font-family-serif: Georgia, Cambria, "Times New Roman", Times, serif;
    --font-family-sans: Inter, "Helvetica Neue", Helvetica, Arial, sans-serif;
    --font-family-display: Play;
}

body {
    perspective: 1000px;
    overflow-x: hidden;
}

:root {

    --primary-50: rgb(255, 255, 255);
    --primary-100: rgb(250, 251, 253);
    --primary-200: rgb(236, 240, 246);
    --primary-300: rgb(213, 222, 234);
    --primary-400: rgb(180, 196, 218);
    --primary-500: rgb(139, 163, 198);
    --primary-600: rgb(87, 123, 172);
    --primary-700: rgb(27, 75, 142);
    --primary-800: rgb(16, 51, 101);
    --primary-900: rgb(8, 27, 53);
    --primary-950: rgb(0, 0, 0);

    --gray-50:  #f6f6f6;
    --gray-100: #e7e7e7;
    --gray-200: #d1d1d1;
    --gray-300: #b0b0b0;
    --gray-400: #888888;
    --gray-500: #6d6d6d;
    --gray-600: #5d5d5d;
    --gray-700: #4f4f4f;
    --gray-800: #454545;
    --gray-900: #3d3d3d;
    --gray-950: #000000;
}

@font-face {
    font-family: Inter;
    font-style: normal;
    font-weight: 400;
    font-display: swap;
    src: url(https://fonts.gstatic.com/s/inter/v13/UcCO3FwrK3iLTeHuS_fvQtMwCp50KnMw2boKoduKmMEVuLyfAZJhiI2B.woff2) format("woff2");
    unicode-range: U+0460-052F,U+1C80-1C88,U+20B4,U+2DE0-2DFF,U+A640-A69F,U+FE2E-FE2F
}

@font-face {
    font-family: Inter;
    font-style: normal;
    font-weight: 400;
    font-display: swap;
    src: url(https://fonts.gstatic.com/s/inter/v13/UcCO3FwrK3iLTeHuS_fvQtMwCp50KnMw2boKoduKmMEVuLyfAZthiI2B.woff2) format("woff2");
    unicode-range: U+0301,U+0400-045F,U+0490-0491,U+04B0-04B1,U+2116
}

@font-face {
    font-family: Inter;
    font-style: normal;
    font-weight: 400;
    font-display: swap;
    src: url(https://fonts.gstatic.com/s/inter/v13/UcCO3FwrK3iLTeHuS_fvQtMwCp50KnMw2boKoduKmMEVuLyfAZNhiI2B.woff2) format("woff2");
    unicode-range: U+1F00-1FFF
}

@font-face {
    font-family: Inter;
    font-style: normal;
    font-weight: 400;
    font-display: swap;
    src: url(https://fonts.gstatic.com/s/inter/v13/UcCO3FwrK3iLTeHuS_fvQtMwCp50KnMw2boKoduKmMEVuLyfAZxhiI2B.woff2) format("woff2");
    unicode-range: U+0370-0377,U+037A-037F,U+0384-038A,U+038C,U+038E-03A1,U+03A3-03FF
}

@font-face {
    font-family: Inter;
    font-style: normal;
    font-weight: 400;
    font-display: swap;
    src: url(https://fonts.gstatic.com/s/inter/v13/UcCO3FwrK3iLTeHuS_fvQtMwCp50KnMw2boKoduKmMEVuLyfAZBhiI2B.woff2) format("woff2");
    unicode-range: U+0102-0103,U+0110-0111,U+0128-0129,U+0168-0169,U+01A0-01A1,U+01AF-01B0,U+0300-0301,U+0303-0304,U+0308-0309,U+0323,U+0329,U+1EA0-1EF9,U+20AB
}

@font-face {
    font-family: Inter;
    font-style: normal;
    font-weight: 400;
    font-display: swap;
    src: url(https://fonts.gstatic.com/s/inter/v13/UcCO3FwrK3iLTeHuS_fvQtMwCp50KnMw2boKoduKmMEVuLyfAZFhiI2B.woff2) format("woff2");
    unicode-range: U+0100-02AF,U+0304,U+0308,U+0329,U+1E00-1E9F,U+1EF2-1EFF,U+2020,U+20A0-20AB,U+20AD-20C0,U+2113,U+2C60-2C7F,U+A720-A7FF
}

@font-face {
    font-family: Inter;
    font-style: normal;
    font-weight: 400;
    font-display: swap;
    src: url(https://fonts.gstatic.com/s/inter/v13/UcCO3FwrK3iLTeHuS_fvQtMwCp50KnMw2boKoduKmMEVuLyfAZ9hiA.woff2) format("woff2");
    unicode-range: U+0000-00FF,U+0131,U+0152-0153,U+02BB-02BC,U+02C6,U+02DA,U+02DC,U+0304,U+0308,U+0329,U+2000-206F,U+2074,U+20AC,U+2122,U+2191,U+2193,U+2212,U+2215,U+FEFF,U+FFFD
}

@font-face {
    font-family: Play;
    font-style: normal;
    font-weight: 400;
    font-display: swap;
    src: url(https://fonts.gstatic.com/s/play/v19/6aez4K2oVqwIvtg2H68T.woff2) format("woff2");
    unicode-range: U+0460-052F,U+1C80-1C88,U+20B4,U+2DE0-2DFF,U+A640-A69F,U+FE2E-FE2F
}

@font-face {
    font-family: Play;
    font-style: normal;
    font-weight: 400;
    font-display: swap;
    src: url(https://fonts.gstatic.com/s/play/v19/6aez4K2oVqwIvtE2H68T.woff2) format("woff2");
    unicode-range: U+0301,U+0400-045F,U+0490-0491,U+04B0-04B1,U+2116
}

@font-face {
    font-family: Play;
    font-style: normal;
    font-weight: 400;
    font-display: swap;
    src: url(https://fonts.gstatic.com/s/play/v19/6aez4K2oVqwIvtY2H68T.woff2) format("woff2");
    unicode-range: U+0370-0377,U+037A-037F,U+0384-038A,U+038C,U+038E-03A1,U+03A3-03FF
}

@font-face {
    font-family: Play;
    font-style: normal;
    font-weight: 400;
    font-display: swap;
    src: url(https://fonts.gstatic.com/s/play/v19/6aez4K2oVqwIvto2H68T.woff2) format("woff2");
    unicode-range: U+0102-0103,U+0110-0111,U+0128-0129,U+0168-0169,U+01A0-01A1,U+01AF-01B0,U+0300-0301,U+0303-0304,U+0308-0309,U+0323,U+0329,U+1EA0-1EF9,U+20AB
}

@font-face {
    font-family: Play;
    font-style: normal;
    font-weight: 400;
    font-display: swap;
    src: url(https://fonts.gstatic.com/s/play/v19/6aez4K2oVqwIvts2H68T.woff2) format("woff2");
    unicode-range: U+0100-02AF,U+0304,U+0308,U+0329,U+1E00-1E9F,U+1EF2-1EFF,U+2020,U+20A0-20AB,U+20AD-20C0,U+2113,U+2C60-2C7F,U+A720-A7FF
}

@font-face {
    font-family: Play;
    font-style: normal;
    font-weight: 400;
    font-display: swap;
    src: url(https://fonts.gstatic.com/s/play/v19/6aez4K2oVqwIvtU2Hw.woff2) format("woff2");
    unicode-range: U+0000-00FF,U+0131,U+0152-0153,U+02BB-02BC,U+02C6,U+02DA,U+02DC,U+0304,U+0308,U+0329,U+2000-206F,U+2074,U+20AC,U+2122,U+2191,U+2193,U+2212,U+2215,U+FEFF,U+FFFD
}

.fade-enter-active,
.fade-exit-active {
  transition: opacity 0.3s;
}

.fade-enter,
.fade-exit-to {
  opacity: 0;
}

.fade-enter {
  opacity: 0;
}

.flip-enter-active,
.flip-exit-active {
  transition: all 0.3s;
}

.flip-enter,
.flip-exit-to {
    transform: rotateX(60deg) translateY(-300px);
    opacity: 0;
}

.flip-enter {
    transform: rotateX(60deg) translateY(-300px);
    opacity: 0;
}

.transition-container {
    display: grid;
    grid-template-rows: 1fr;
    grid-template-columns: 1fr;
}

.transition-container > * {
    grid-row: 1;
    grid-column: 1;
}

